# video_scanner

./: .gitignore  CMakeLists.txt  build.sh  video_scan_20250419_223057.json
.cache/clangd/index/: file_scanner.cpp.1256CE9D6D494BB7.idx  file_scanner.h.38DC0187086BE36F.idx  json.hpp.9FE7102C44E8EEF1.idx  json_helper.cpp.85F9357546BB34BC.idx  json_helper.h.B03D9127AE0B9965.idx  main.cpp.031835362AA7D36B.idx  test_file_scanner.cpp.36D38A21418AEB56.idx  test_file_scanner.cpp.969D07B4F39C386B.idx  test_json_helper.cpp.007F2674F0B2A4A6.idx  test_json_helper.cpp.C0EA375228BDFE58.idx  test_video_scanner.cpp.32CDC7685A67392A.idx  test_video_scanner.cpp.B5DDA5DB770E48DA.idx  video_scanner.cpp.14DB4E697AD2FFB1.idx  video_scanner.h.D8B76880EE4B3BD6.idx
include/video_scanner/: file_scanner.h  filename_parser.h  json_helper.h  logger.h  video_scanner.h  video_types.h
include/video_scanner/utils/: string_utils.h
scripts/: format.sh
src/: file_scanner.cpp  filename_parser.cpp  json_helper.cpp  logger.cpp  main.cpp  video_scanner.cpp
src/utils/: string_utils.cpp
tests/: CMakeLists.txt  file_scanner_test.cpp  filename_parser_test.cpp  json_helper_test.cpp  test_filename_parser.cpp  test_json_helper.cpp  video_scanner_test.cpp
tests/utils/: string_utils_test.cpp
